--- a/first-spring-step/src/main/webapp/WEB-INF/vm/hello.vm
+++ b/first-spring-step/src/main/webapp/WEB-INF/vm/hello.vm
@@ -1,7 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <body>
-<h2>Hello ${name}!</h2>
+<h2>Hello
+    #if(${user.username})
+        ${user.username}
+    #else
+        World
+    #end!</h2>
 <form action="/adduser">
     <input type="text" id="username" name="username"/>
     <input type="text" id="password" name="password"/>
