--- a/first-spring-step/src/main/webapp/WEB-INF/vm/hello.vm
+++ b/first-spring-step/src/main/webapp/WEB-INF/vm/hello.vm
@@ -1,40 +1,59 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+pageEncoding="UTF-8"%>
+<c:set var="path" value="${pageContext.request.contextPath}" />
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link href="${rc.contextPath}/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
-<div>$!{message}</div>
-<h2>Hello
-    #if(${user.username})
-        ${user.username}
-    #else
-        World
-    #end!</h2>
-<form action="/adduser">
-    <div class="form-group">
-        <input type="text" class="input-sm" id="username" name="username"/>
-        <input type="text" class="input-sm" id="password" name="password"/>
-    </div>
-    <button type="submit">提交</button>
-</form>
+<div class="container">
+    <div class="col-sm-12 col-md-12 oper-panel" style="padding-top: 40px;margin-right: 20px;width: 100%;">
+        <form id="editForm" method="post" class="form-horizontal" >
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="${rc.contextPath}/static/jquery/jquery-3.1.1.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="${rc.contextPath}/static/bootstrap/dist/js/bootstrap.min.js"></script>
+            <div class="form-group">
+                <label class="col-xs-4 control-label text-center" for="contactsName">用户名：</label>
+                <div class="col-xs-7">
+                    <input type="text" class="form-control validate[required,maxSize[15]]" id="contactsName" name="contactsName" value="${contacts.contactsName}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-4 control-label text-center" for="dept">添加分组至：</label>
+                <div class="col-xs-7">
+                    <select class="form-control validate[required]" id=dept name="dept" >
+                        <c:forEach items="${sysDepts}" var="sysDepts" varStatus="vs">
+                            <option id="${sysDepts.deptName}" value="${sysDepts.deptName}">${sysDepts.deptName}</option>
+                        </c:forEach>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-4 control-label text-center" for="mobie">手机号：</label>
+                <div class="col-xs-7">
+                    <input type="text" class="form-control validate[required,custom[mobile]]" id="mobie" name="mobie" value="${contacts.mobie}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-4 control-label text-center" for="contactsWechat">微信号：</label>
+                <div class="col-xs-7">
+                    <input type="text" class="form-control validate[required,maxSize[15]]" id="contactsWechat" name="contactsWechat" value="${contacts.contactsWechat}"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-4 control-label text-center" for="eMail">E-Mail：</label>
+                <div class="col-xs-7">
+                    <input type="text" class="form-control validate[maxSize[50],custom[email]]" id="eMail" name="eMail" value="${contacts.eMail}"/>
+                </div>
+            </div>
+            <div class="text-center" style="margin-top: 25px;">
+                <button type="button" class="btn btn-primary" id="saveBtn" onclick="saveContacts()">保存</button>
+                <button type="button" class="btn btn-default" onclick="cancelEdit()">返回</button>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
