--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -5,18 +5,38 @@ html, body, h1, span {
 }
 
 .index-container {
+    margin: 5px auto 5px auto;
+    padding: 8px;
+    width: 61.8rem;
+    height: 38rem;
+    border: 4px solid #000;
+}
 
+.index-container_toy {
+    margin: 8px;
+    width: 39rem;
+    height: 11rem;
+    border: 4px solid #000;
+    float: left;
+}
+
+.index-container_a {
+    margin: 8px;
+    width: 19rem;
+    height: 11rem;
+    border: 4px solid #000;
+    float: left;
 }
 
 /*index mask start*/
 .index-mask {
+    height: 100%;
+    overflow: hidden;
+    background-color: #fff;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    height: 100%;
-    overflow: hidden;
-    background-color: #fff;
 }
 
 .index-mask_top {
