--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -14,6 +14,10 @@ html, body {
     border: 4px solid #000;
 }
 
+.index-container_left div {
+    cursor: pointer;
+}
+
 .index-container_left {
     width: 50.25rem;
     height: 100%;
