--- a/first-spring-step/src/main/webapp/static/css/product-list.css
+++ b/first-spring-step/src/main/webapp/static/css/product-list.css
@@ -1,23 +1,30 @@
 body {
-    color: #fff;
-    text-align: center;
-    height: 100%;
-    background-color: #333;
+    background-color: #eee;
+    font-size: 84%;
+    text-align: justify;
 }
 
-.site-wrapper {
-    display: table;
-    width: 100%;
-    height: 100%;
+.column {
+    display: inline-block;
+    vertical-align: top;
 }
 
-.site-wrapper-inner {
-    display: table-cell;
-    vertical-align: middle;
+.pic_a {
+    display: block;
+    padding: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    text-decoration: none;
 }
 
-.cover-container {
-    width: 700px;
-    margin-right: auto;
-    margin-left: auto;
+.pic_a img {
+    display: block;
+    margin: 0 auto 5px;
+    border: 0;
+    vertical-align: bottom;
+}
+
+.pic_a strong {
+    color: #333;
 }
