--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -5,61 +5,41 @@ html, body, h1, span, div {
 
 html, body {
     height: 100%;
+    font-size: 100%;
+    background-color: #eee;
 }
 
 .index-container {
-    margin: 5px auto 5px auto;
+    margin: 5rem auto 0.25rem auto;
     width: 75rem;
     height: 46.25rem;
-    border: 4px solid #000;
+    border: 0.25rem solid #000;
 }
 
-.index-container_left div {
+.index-container_left img {
     cursor: pointer;
 }
 
-.index-container_left {
-    width: 50.25rem;
+.index-container_left, .index-container_right {
     height: 100%;
-    float: left;
-}
-
-.index-container_right {
-    width: 24.75rem;
-    height: 100%;
-    float: left;
 }
 
 .index-container--square {
-    margin: 8px;
-    width: 15rem;
+    margin: 1rem;
     height: 13rem;
-    border: 4px solid #000;
-    float: left;
+    overflow: hidden;
 }
 
 .index-container--vertical {
-    margin: 8px;
-    width: 15rem;
-    height: 27.5rem;
-    border: 4px solid #000;
-    float: left;
-}
-
-.index-container--across {
-    margin: 8px;
-    width: 31.5rem;
-    height: 13rem;
-    border: 4px solid #000;
-    float: left;
+    margin: 1rem;
+    height: 28rem;
+    overflow: hidden;
 }
 
 .index-container--video {
-    margin: 8px;
-    width: 23rem;
+    margin: 1rem;
     height: 13rem;
-    border: 4px solid #000;
-    float: left;
+    border: 0.25rem solid #000;
 }
 
 /*index mask start*/
