--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -10,43 +10,21 @@ html, body {
 }
 
 .index-container {
-    margin: 5rem auto 0.25rem auto;
-    width: 75rem;
-    height: 46.25rem;
+    margin: auto;
     border: 0.25rem solid #000;
 }
 
-.index-container_left img {
+.index-container div {
+    background-color: #fff;
     cursor: pointer;
 }
 
-.index-container_left, .index-container_right {
-    height: 100%;
-}
-
-.index-container--square {
-    margin: 1rem;
-    height: 13rem;
-    overflow: hidden;
-}
-
-.index-container--vertical {
-    margin: 1rem;
-    height: 28rem;
-    overflow: hidden;
-}
-
-.index-container--video {
-    margin: 1rem;
-    height: 13rem;
-    border: 0.25rem solid #000;
-}
 
 /*index mask start*/
 .index-mask {
     height: 100%;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #eee;
     position: absolute;
     top: 0;
     left: 0;
