--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -1,41 +1,61 @@
-html, body, h1, span, div {
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    height: 100%;
-    font-size: 100%;
-    background-color: #fdffdf;
-}
-
-.floor img {
+body > header, body > section, body > footer {
+    float: left;
     width: 100%;
-    height: 100%;
+    clear: both;
 }
 
-.floor-left {
-    padding: 15px;
+body {
+    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+.clear {
+    display: block;
+}
+
+.floor {
+    padding: 1em;
+}
+
+.night {
+    background-color: #333;
+    color: #ddd;
+}
+
+.hot {
     background-color: #fff;
-    border: 1px solid #fff;
+    color: #9e1313;
 }
 
-.floor-right {
-    padding: 1rem;
-    background-color: #fff;
-    border: 1px solid #fff;
+.block {
+    max-width: 978px;
+    margin: 0 auto;
+    display: block;
+    clear: both;
+    padding: 0 20px 30px;
 }
 
-.child {
-    background-color: #daf9ca;
+.block h2 {
+    font-size: 28px;
 }
 
-.girl {
-    background-color: #efcee8;
+.block img {
+    float: left;
+    margin: 20px 30px 30px 50px;
+    width: 300px;
+    height: 251px;
 }
 
-.boy {
-    background-color: #f3d7b5;
+.block p {
+    margin: .75em 0;
+    font-size: 18px;
+}
+
+.ahead-food {
+    float: right;
 }
 
 /*index mask start*/
