--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -17,17 +17,40 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .floor {
-    padding: 1em;
+    padding: 2em;
 }
 
 .night {
-    background-color: #333;
+    background: url(../img/night-background.png);
     color: #ddd;
+}
+
+.sea {
+    background: url(../img/sea-background.png);
+    color: #fdfcf3;
 }
 
 .hot {
     background-color: #fff;
     color: #9e1313;
+}
+
+.night.ahead-food {
+    float: right;
+    cursor: pointer;
+    color: brown;
+}
+
+.sea.ahead-food {
+    float: right;
+    cursor: pointer;
+    color: #fff7a4;
+}
+
+.hot.ahead-food {
+    float: right;
+    cursor: pointer;
+    color: brown;
 }
 
 .block {
@@ -39,23 +62,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .block h2 {
-    font-size: 28px;
+    margin: 1em 0;
+    font-size: 2em;
+}
+
+.block h2 b {
+    margin: 0.25rem;
+    font-size: 2.5em;
 }
 
 .block img {
     float: left;
-    margin: 20px 30px 30px 50px;
-    width: 300px;
-    height: 251px;
+    margin: -0.75em 2em 3.25em 1.5em;
+    width: 20em;
+    height: 17em;
 }
 
 .block p {
-    margin: .75em 0;
-    font-size: 18px;
-}
-
-.ahead-food {
-    float: right;
+    margin: 1.75em 0;
+    font-size: 1.15em;
 }
 
 /*index mask start*/
