--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -21,36 +21,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .night {
-    background: url(../img/night-background.png);
+    background: #2c3137 url(../img/night-background.png) top;
     color: #ddd;
 }
 
 .sea {
-    background: url(../img/sea-background.png);
+    background: #3c98d9 url(../img/sea-background.png) no-repeat top;
     color: #fdfcf3;
 }
 
 .hot {
-    background-color: #fff;
-    color: #9e1313;
-}
-
-.night.ahead-food {
-    float: right;
-    cursor: pointer;
-    color: brown;
-}
-
-.sea.ahead-food {
-    float: right;
-    cursor: pointer;
-    color: #fff7a4;
-}
-
-.hot.ahead-food {
-    float: right;
-    cursor: pointer;
-    color: brown;
+    background: linear-gradient(to right, #1a1a1a, #caa703, #1a1a1a);
+    color: #0d0d0f;
 }
 
 .block {
@@ -67,13 +49,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .block h2 b {
-    margin: 0.25rem;
-    font-size: 2.5em;
+    margin: 1rem;
+    font-size: 2em;
 }
 
 .block img {
     float: left;
-    margin: -0.75em 2em 3.25em 1.5em;
+    margin: 1.75em 2em 2.5em 1.5em;
     width: 20em;
     height: 17em;
 }
@@ -81,6 +63,41 @@ h1, h2, h3, h4, h5, h6 {
 .block p {
     margin: 1.75em 0;
     font-size: 1.15em;
+    text-indent: 2em;
+}
+
+.ahead-food {
+    margin: 2em 2em 0 0;
+}
+
+.night h2 b {
+    color: #008B8B;
+}
+
+.sea h2 b {
+    color: #e0b800;
+}
+
+.hot h2 b {
+    color: #9e1313;
+}
+
+.night .ahead-food {
+    float: right;
+    cursor: pointer;
+    color: brown;
+}
+
+.sea .ahead-food {
+    float: right;
+    cursor: pointer;
+    color: #fff7a4;
+}
+
+.hot .ahead-food {
+    float: right;
+    cursor: pointer;
+    color: #0d0d0f;
 }
 
 /*index mask start*/
