--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sea {
-    background: #3c98d9 url(../img/sea-background.png) no-repeat top;
+    background: #3c98d9 url(../img/sea-background.jpg) no-repeat top;
     color: #fdfcf3;
 }
 
