--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fdfcf3;
 }
 
-.hot {
+.spicy {
     background: linear-gradient(to right, #1a1a1a, #caa703, #1a1a1a);
     color: #0d0d0f;
 }
@@ -78,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #e0b800;
 }
 
-.hot h2 b {
+.spicy h2 b {
     color: #9e1313;
 }
 
@@ -94,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff7a4;
 }
 
-.hot .ahead-food {
+.spicy .ahead-food {
     float: right;
     cursor: pointer;
     color: #0d0d0f;
@@ -138,3 +138,39 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*index mask end*/
+
+#back-to-top {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    background: rgba(39, 174, 96, .6);
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    z-index: 1;
+    display: none;
+}
+
+#back-to-top:hover {
+    background: #27ae60;
+}
+
+#back-to-top i {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+}
+
+.fa-angle-up:before {
+    content: "\f106";
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
