--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -71,6 +71,11 @@ h1, h2, h3, h4, h5, h6 {
     height: 17em;
 }
 
+.block img {
+    border: 10px solid transparent;
+    border-image: url(../img/border.png) 10 10 round;
+}
+
 .block p {
     margin: 1.75em 0;
     font-size: 1.15em;
