--- a/first-spring-step/src/main/webapp/static/css/product-detail.css
+++ b/first-spring-step/src/main/webapp/static/css/product-detail.css
@@ -8,7 +8,7 @@ html, body {
     font-size: 100%;
 }
 
-.product-intro {
+.product-detail {
     display: block;
     padding: 5px;
     border: 1px solid #ccc;
@@ -17,15 +17,15 @@ html, body {
     margin: 1rem auto 0.25rem auto;
 }
 
-.product-intro article {
+.product-detail article {
     margin-top: 2rem;
 }
 
-.product-intro article p {
+.product-detail article p {
     padding: 2rem;
     line-height: 2rem;
 }
 
-.product-intro article img {
+.product-detail article img {
     width: 100%;
 }
