首页回到顶部图标

--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.75rem 2rem 2.5rem 1.5rem;
     width: 20rem;
     height: 17rem;
+    display: block;
 }
 
 .block img:hover {
