--- a/first-spring-step/src/main/webapp/static/css/product-detail.css
+++ b/first-spring-step/src/main/webapp/static/css/product-detail.css
@@ -19,6 +19,8 @@ html, body {
 
 .product-detail article {
     margin-top: 2rem;
+    max-width: 750px;
+    float: right;
 }
 
 .product-detail article p {
