--- a/first-spring-step/src/main/webapp/static/css/index_change.css
+++ b/first-spring-step/src/main/webapp/static/css/index_change.css
@@ -60,8 +60,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .block h2 b {
-    margin: 1rem;
-    font-size: 2rem;
+    margin: 1rem 0 1rem 0;
+    font-size: 2.5rem;
+    font-weight:500;
 }
 
 .block img {
@@ -141,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
         margin-left: -10%;margin-right:0
     }
     .intro{
-        height: 239px;
+        height: 300px;
     }
     .category{
         padding-right: 2%;
@@ -158,7 +159,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .night h2 b {
-    color: #c4944c;
+    color: #008B8B;
 }
 
 .sea h2 b {
