--- a/first-spring-step/src/main/webapp/static/css/index.css
+++ b/first-spring-step/src/main/webapp/static/css/index.css
@@ -98,12 +98,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .intro {
-    margin: 0 auto;
-    height: 292px;
-    width: 225px;
+    height: 22rem;
+    width: 12rem;
     writing-mode: vertical-rl; /*从右向左 从左向右是 writing-mode: vertical-lr;*/
     font-family: simsun;
-    margin: 1.75rem 0;
+    margin: 1.75rem 1rem 1.75rem 0;
     font-size: 1.1rem;
     text-indent: 2rem;
     float: right;
@@ -152,16 +151,16 @@ h1, h2, h3, h4, h5, h6 {
         margin-right: 0
     }
 
-    .intro {
-        height: 300px;
-    }
-
     .category {
         padding-right: 2%;
     }
 
+    .intro {
+        margin-right: 0;
+    }
+
     .ahead-food {
-        margin: 2rem 0rem 0 0;
+        margin: 12rem 0 0 0;
     }
 }
 
